--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://MarynaSalatska.github.io/bootcamp-project",
+  "homepage": "https://aniyavolfman.github.io/team-project-scss",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /bootcamp-project/"
+    "build": "parcel build src/*.html --public-url /team-project-scss/"
   },
   "repository": {
     "type": "git",
